--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,12 +4,38 @@
     box-sizing: border-box;
 }
 
+:root {
+    --text-color: #1A162E;
+    --icon-color: brightness(0) saturate(100%) invert(7%) sepia(14%) saturate(3989%) hue-rotate(218deg) brightness(96%) contrast(95%);
+
+}
+
 html {
     font-size: 62.5%;
-
 }
 
 body {
     font-size: 1.6rem;
     font-family: 'Gordita', sans-serif;
+    color: var(--text-color); 
 }
+
+a {
+    text-decoration: none;
+}
+
+button {
+    outline: none;
+    border: none;
+    background: none;
+}
+
+input, button, textarea, select, a {
+    font-family: inherit;
+    color: inherit; 
+}
+
+.icon {
+    filter: var(--icon-color);
+}
+
